# wave

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js  wave.h
.github/workflows/: ci.yaml  docs.yaml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/wave/math/: trait.MovingAvgIter.js
src/: cbind.rs  lib.rs  math.rs  measurements.rs  recognizer.rs
src/wave/: cbind.rs.html  lib.rs.html  math.rs.html  measurements.rs.html  recognizer.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
wave/: all.html  index.html  sidebar-items.js
wave/cbind/: constant.HISTORY_SIZE.html  constant.RES_X.html  constant.RES_Y.html  fn.coords_cartesian_from_spherical.html  fn.coords_spherical_from_cartesian.html  fn.gesture_recognizer_new.html  fn.gesture_recognizer_reset.html  fn.gesture_recognizer_update.html  fn.recognizer_params_default.html  fn.recognizer_result_default.html  fn.sensor_measurement_empty.html  fn.sensor_measurement_invalid.html  fn.sensor_params_default_vl53l5cx.html  index.html  sidebar-items.js
wave/math/: fn.matrix_2d_reverse_cols.html  fn.matrix_2d_reverse_rows.html  fn.matrix_2d_rotate_180deg.html  fn.matrix_2d_rotate_270deg.html  fn.matrix_2d_rotate_90deg.html  fn.matrix_2d_transpose.html  index.html  sidebar-items.js  struct.CoordsCartesian.html  struct.CoordsSpherical.html  struct.MovingAvg.html  trait.MovingAvgIter.html
wave/measurements/: enum.HandState.html  index.html  sidebar-items.js  struct.SensorMeasurement.html  struct.SensorParams.html
wave/recognizer/: constant.HISTORY_SIZE.html  enum.Gesture.html  enum.RecognizerStatus.html  index.html  sidebar-items.js  struct.GestureRecognizer.html  struct.RecognizerParams.html  struct.RecognizerResult.html
