[package]
name = "wave"
version = "0.1.1"
authors = ["flxzt"]
edition = "2021"
description = "A no-std no-alloc gesture recognition library for low resolution TOF-Sensors"
readme = "README.md"
homepage = "https://github.com/flxzt/wave"
repository = "https://github.com/flxzt/wave"
license = "MIT"
keywords = ["embedded", "sensors", "tof", "gestures"]
categories = ["embedded", "no-std", "hardware-support"]
exclude = [
    "misc/showcase/*",
]

[lib]
name = "wave"
crate-type = ["lib", "staticlib"]

[profile.dev]
panic = "abort"
# always optimize for size
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.5"

[build-dependencies]

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.3.0"